returning owner information attached to jobs
